@@ -104,20 +104,20 @@
 .border-alpha95  { --border-alpha:  95%; }
 .border-alpha100 { --border-alpha: 100%; }
 
-.br1   { --border-radius: var(--br1); }
-.br2   { --border-radius: var(--br2); }
-.br3   { --border-radius: var(--br3); }
-.br4   { --border-radius: var(--br4); }
-.br5   { --border-radius: var(--br5); }
-.br100 { --border-radius:      100%;  }
-.br999 { --border-radius:      999px; }
+.border-radius1   { --border-radius: var(--border-radius1); }
+.border-radius2   { --border-radius: var(--border-radius2); }
+.border-radius3   { --border-radius: var(--border-radius3); }
+.border-radius4   { --border-radius: var(--border-radius4); }
+.border-radius5   { --border-radius: var(--border-radius5); }
+.border-radius100 { --border-radius:      100%;  }
+.border-radius999 { --border-radius:      999px; }
 
-.br1,
-.br2,
-.br3,
-.br4,
-.br5,
-.br100,
-.br999 {
+.border-radius1,
+.border-radius2,
+.border-radius3,
+.border-radius4,
+.border-radius5,
+.border-radius100,
+.border-radius999 {
   border-radius: var(--border-radius);
 }
