@@ -3,6 +3,7 @@
   * (grid) gap
   * (cursor) move
   * (copy) remove depreciated vars
+  * (border) br to border-radius
 
 # 0.18.0 (2021-11-18)
 
